# Market_Risk

./: CMakeLists.txt  README.md  download.py
data/: prices.csv
include/: dispatcher.h  logger.h  price_packet.h  price_tracker.h  risk_monitor.h
src/: logger.cpp  main.cpp  price_tracker.cpp  risk_monitor.cpp
